--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,12 @@
   margin: 0;
 }
 
+h1 {
+  width: 1200px;
+  margin: 20px auto;
+  text-align: center;
+}
+
 .btn {
   color: #000 !important;
   transition: 1s;
